@@ -1,108 +1,62 @@
 package com.example.notes4all.dao;
-import com.example.notes4all.mainApplication;
-import com.example.notes4all.util.FirebaseAuthService;
-import com.example.notes4all.util.Session;
-import com.google.firebase.auth.*;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
-import javafx.scene.control.Alert;
+
+import com.example.notes4all.util.FirebaseConstants;
+import org.json.JSONObject;
 
 import java.io.*;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class AuthDAO {
 
-    private static final String API_KEY = "AIzaSyC_iCeuQwgDiCAT7xZb59huv5ox3c7p1m0";
+    private static final HttpClient client = HttpClient.newHttpClient();
 
+    public static JSONObject login(String email, String password) throws Exception{
+        String url = "https://identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key="
+                + FirebaseConstants.API_KEY;
 
-    public static String register(String email, String password) throws Exception {
+        String jsonBody = """
+                {
+                  "email": "%s",
+                  "password": "%s",
+                  "returnSecureToken": true
+                }
+                """.formatted(email, password);
 
-        if (email == null || email.isEmpty())
-            throw new IllegalArgumentException("Email is required");
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(new URI(url))
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
+                .build();
 
-        if (password == null || password.length() < 6)
-            throw new IllegalArgumentException("Password must be at least 6 characters");
+        String response = client.send(request, HttpResponse.BodyHandlers.ofString()).body();
 
-        UserRecord.CreateRequest request = new UserRecord.CreateRequest()
-                .setEmail(email)
-                .setPassword(password)
-                .setEmailVerified(false)
-                .setDisabled(false);
-
-        UserRecord user = FirebaseAuth.getInstance().createUser(request);
-
-        return user.getUid();
+        return new JSONObject(response);
     }
 
-    public static boolean login(String email, String password) {
+    public static JSONObject register(String email, String password) throws Exception {
 
-        if (email == null || email.isEmpty() ||
-                password == null || password.isEmpty()) {
-            return false;
-        }
+        String url = "https://identitytoolkit.googleapis.com/v1/accounts:signUp?key="
+                + FirebaseConstants.API_KEY;
 
-        try {
-            String endpoint =
-                    "https://identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key=" + API_KEY;
+        String jsonBody = """
+                {
+                  "email": "%s",
+                  "password": "%s",
+                  "returnSecureToken": true
+                }
+                """.formatted(email, password);
 
-            URL url = new URL(endpoint);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(url))
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
+                .build();
 
-            conn.setRequestMethod("POST");
-            conn.setRequestProperty("Content-Type", "application/json");
-            conn.setDoOutput(true);
+        String response = client.send(request, HttpResponse.BodyHandlers.ofString()).body();
 
-            String payload = "{"
-                    + "\"email\":\"" + email + "\","
-                    + "\"password\":\"" + password + "\","
-                    + "\"returnSecureToken\":true"
-                    + "}";
-
-            try (OutputStream os = conn.getOutputStream()) {
-                os.write(payload.getBytes());
-            }
-
-            int code = conn.getResponseCode();
-
-            InputStream stream =
-                    (code == 200) ? conn.getInputStream() : conn.getErrorStream();
-
-            BufferedReader br = new BufferedReader(new InputStreamReader(stream));
-            StringBuilder response = new StringBuilder();
-            String line;
-
-            while ((line = br.readLine()) != null) {
-                response.append(line);
-            }
-
-            if (code == 200) {
-                JsonObject json =
-                        JsonParser.parseString(response.toString()).getAsJsonObject();
-
-                Session.userId  = json.get("localId").getAsString();
-                Session.email   = json.get("email").getAsString();
-                Session.idToken = json.get("idToken").getAsString();
-
-                return true;
-            }
-
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
-        return false;
-    }
-
-    public static void logout() {
-        Session.userId = null;
-        Session.email = null;
-        Session.idToken = null;
-    }
-
-    public static boolean isLoggedIn() {
-        return Session.userId != null &&
-                Session.email != null &&
-                Session.idToken != null;
+        return new JSONObject(response);
     }
 }
